p2/confs/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
    - port: 8080
      targetPort: 8080
