p2/confs/app3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3
spec:
  type: ClusterIP
  selector:
    app: app3
  ports:
    - port: 8080
      targetPort: 8080
